--- a/administracionmercadeoceipa.html
+++ b/administracionmercadeoceipa.html
@@ -737,7 +737,7 @@ p {
     <div class="nav-bar">
         <img src="Imagenes/logoexperienciablanco.png" alt="Logo Experiencia" class="logo-experience">
         <span class="brand-name">Punto Experiencia Sibundoy</span>
-        <a href="suramericana.html"><i class="fas fa-home"></i> Inicio</a>      
+        <a href="index.html"><i class="fas fa-home"></i> Inicio</a>      
         <div class="dropdown">
             <a href="#programas-academicos"><i class="fas fa-graduation-cap"></i> Programas Académicos</a>
             <div class="dropdown-content">
