--- a/nosotros.html
+++ b/nosotros.html
@@ -190,8 +190,8 @@
 
     <!-- Barra de Navegación -->
     <nav class="nav-bar">
-        <a href="suramericana.html"><i class="fas fa-home"></i> Inicio</a>
-        <a href="suramericana.html"><i class="fas fa-graduation-cap"></i> Programas Académicos</a>
+        <a href="index.html"><i class="fas fa-home"></i> Inicio</a>
+        <a href="index.html"><i class="fas fa-graduation-cap"></i> Programas Académicos</a>
         <a href="nosotros.html"><i class="fas fa-info-circle"></i> Nosotros</a>
     </nav>
 
