--- a/index.html
+++ b/index.html
@@ -1528,7 +1528,7 @@ h1 {
         <a href="https://instagram.com" title="Instagram"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://wa.me/573122863375" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
         <a href="https://wa.me/573122863375" target="_blank" title="WhatsApp"><i class="fas fa-phone-alt"></i> <span class="phone-number">+57 312 286 3375</span></a>
-        <a href="mailto:suramericanoce@gmail.com" title="Correo Electrónico" class="email"><i class="fas fa-envelope"></i> <span class="email-text">suramericanoce@gmail.com</span></a>
+        <a href="mailto:suramericanoce@gmail.com" title="Correo Electrónico" class="email"><i class="fas fa-envelope"></i> <span class="email-text">suramericanosibundoy@gmail.com</span></a>
     </div>
     <!-- Formulario de contacto emergente -->
 <div class="contact-popup" id="contactForm">
