actualizacion de codigo

--- a/administracionandina.html
+++ b/administracionandina.html
@@ -838,7 +838,7 @@ p {
         <p><strong>COP$ 2.360.000</strong></p>
         <p>SNIES: 103186 – Res. No. 7529 del 02/05/2022</p>
         <p>Créditos: 136</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/U_Admini-empresas.jpg" alt="Imagen del programa de Administración de Empresas">
 </div>
