--- a/administracionnegociosceipa.html
+++ b/administracionnegociosceipa.html
@@ -838,7 +838,7 @@ p {
         <p><strong>COP$ 1.330.248</strong></p>
         <p>SNIES: 52785 – Res. No. 019503 del 20/10/2023</p>
         <p>Créditos: 160</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/U_Admin_Negoc.jpg" alt="Imagen del programa de Administración en Negocios Internacionales">
 </div>
