--- a/administracionpublicaandina.html
+++ b/administracionpublicaandina.html
@@ -838,7 +838,7 @@ p {
         <p><strong>COP$ 2.100.000</strong></p>
         <p>SNIES: 111468 – Res. No. 623 del 30/01/2023</p>
         <p>Créditos: 136</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/U_Admin-publica.jpg" alt="Imagen del programa de Administración Pública">
 </div>
