--- a/comunicacionsocialandina.html
+++ b/comunicacionsocialandina.html
@@ -838,7 +838,7 @@ p {
         <p><strong>COP$ 2.350.000</strong></p>
         <p>SNIES: 109481 – Res. No. 14761 del 12/08/2020</p>
         <p>Créditos: 136</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/U_Comunic.jpg" alt="Imagen del programa de Comunicación Social">
 </div>
