--- a/derechoandina.html
+++ b/derechoandina.html
@@ -837,7 +837,7 @@ p {
         <p><strong>COP$ 2.000.000</strong></p>
         <p>SNIES: 110916 – Res. No. 1048 del 1/02/2022</p>
         <p>Créditos: 160</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/U_Derecho.jpg" alt="Imagen del programa de Derecho">
 </div>
