--- a/espaltagerenciaandina.html
+++ b/espaltagerenciaandina.html
@@ -834,7 +834,7 @@ p {
         <p><strong>COP$ 5.550.000</strong></p>
         <p>SNIES: 105267 – Res. No. 21224 del 28/12/2015</p>
         <p>Créditos: 28</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/ESP-Alta-Gerenc.jpg" alt="Imagen del programa de Especialización en Alta Gerencia">
 </div>
