--- a/espauditoriaandina.html
+++ b/espauditoriaandina.html
@@ -834,7 +834,7 @@ p {
         <p><strong>COP$ 7.700.000</strong></p>
         <p>SNIES: 9757 – Res. No. 1330 del 25/07/2019 – 7 años</p>
         <p>Créditos: 27</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/ESP_Audit_Salud.jpg" alt="Imagen del programa de Especialización en Auditoría en Salud">
 </div>
