--- a/espgerenciafinancieraceipa.html
+++ b/espgerenciafinancieraceipa.html
@@ -834,7 +834,7 @@ p {
         <p><strong>COP$ 10.208.663</strong></p>
         <p>SNIES: 54581 – Resolución 15990 del 18/12/2019</p>
         <p>Créditos: 22</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/ESP_Ger_Financ.jpg" alt="Imagen del programa de Especialización en Gerencia Financiera">
 </div>
