--- a/espgerenciafinandina.html
+++ b/espgerenciafinandina.html
@@ -834,7 +834,7 @@ p {
         <p><strong>COP$ 5.490.000</strong></p>
         <p>SNIES: 105268 – Res. No. 21225 del 28/12/2015</p>
         <p>Créditos: 142</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/ESP-Gerenc-Financ.jpg" alt="Imagen del programa de Especialización en Gerencia Financiera">
 </div>
