--- a/espgerencialogisticaceipa.html
+++ b/espgerencialogisticaceipa.html
@@ -835,7 +835,7 @@ p {
         <p><strong>COP$ 10.208.663</strong></p>
         <p>SNIES: 102207 – Resolución 14291 del 11/12/2019</p>
         <p>Créditos: 22</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/ESP_Ger_Logis.jpg" alt="Imagen del programa de Especialización en Gerencia Logística">
 </div>
