--- a/espgerenciamercadeoceipa.html
+++ b/espgerenciamercadeoceipa.html
@@ -834,7 +834,7 @@ p {
         <p><strong>COP$ 10.208.663</strong></p>
         <p>SNIES: 54346 – Resolución 16790 del 27/12/2019</p>
         <p>Créditos: 22</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/ESP_Ger_Merc.jpg" alt="Imagen del programa de Especialización en Gerencia de Mercadeo">
 </div>
