--- a/espgerenciaproyectosceipa.html
+++ b/espgerenciaproyectosceipa.html
@@ -834,7 +834,7 @@ p {
         <p><strong>COP$ 10.208.663</strong></p>
         <p>SNIES: 52142 – Res. No. 006878 del 27/04/2023</p>
         <p>Créditos: 22</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/ESP_Ger_Proy.jpg" alt="Imagen del programa de Especialización en Gerencia de Proyectos">
 </div>
