--- a/espgesambientalandina.html
+++ b/espgesambientalandina.html
@@ -835,7 +835,7 @@ p {
         <p><strong>COP$ 5.550.000</strong></p>
         <p>SNIES: 9794 – Res. No. 1909 del 22/02/2022</p>
         <p>Créditos: 28</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/ESP-Gest-Amb.jpg" alt="Imagen del programa de Especialización en Gestión Ambiental">
 </div>
