--- a/espinfanciaandinapend.html
+++ b/espinfanciaandinapend.html
@@ -833,7 +833,7 @@ p {
         <p><strong>COP$ 4.650.000</strong></p>
         <p>SNIES: 108414 – Res. No. 11694 del 07/11/2019 – 7 años</p>
         <p>Créditos: 26</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/ESP_Der_Autor.jpg" alt="Imagen del programa de Especialización en Derechos de Autor, Propiedad Industrial y Nuevas Tecnologías">
 </div>
