--- a/espinformaticaandina.html
+++ b/espinformaticaandina.html
@@ -834,7 +834,7 @@ p {
         <p><strong>COP$ 3.730.000</strong></p>
         <p>SNIES: 103206 – Res. No. 2098 del 25/02/2022 – 7 años</p>        
         <p>Duracion del Programa: 2 Semestres</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/ESP_Inform_Innovac_Educ.jpg" alt="Imagen del programa de Especialización en Informática para la Innovación Educativa">
 </div>
