--- a/esppedagogiaandina.html
+++ b/esppedagogiaandina.html
@@ -834,7 +834,7 @@ p {
         <p><strong>COP$ 3.790.000</strong></p>
         <p>SNIES: 102742 – Res. No. 24234 del 23/12/2021 – 7 años</p>
         <p>Créditos: 24</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/ESP_Pedag_Docen.jpg" alt="Imagen del programa de Especialización en Pedagogía y Docencia">
 </div>
