--- a/finanzasynegociosandina.html
+++ b/finanzasynegociosandina.html
@@ -835,7 +835,7 @@ p {
         <p><strong>COP$ 2.360.000</strong></p>
         <p>SNIES: 103187 – Res. No. 7528 del 02/05/2022</p>
         <p>Créditos: 136</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/U_Finanz_Negoc_Inter.jpg" alt="Imagen del programa de Finanzas y Negocios Internacionales">
 </div>
