--- a/ingindustrialandina.html
+++ b/ingindustrialandina.html
@@ -834,7 +834,7 @@ p {
         <p><strong>COP$ 2.580.000</strong></p>
         <p>SNIES: 108057 – Res. No. 6147 del 13/06/2019</p>
         <p>Créditos: 170</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/U_Ing_Indust.jpg" alt="Imagen del programa de Ingeniería Industrial">
 </div>
