--- a/ingsistemasandina.html
+++ b/ingsistemasandina.html
@@ -834,7 +834,7 @@ p {
         <p><strong>COP$ 2.720.000</strong></p>
         <p>SNIES: 104210 – Res. No. 11238 del 17/06/2022</p>
         <p>Créditos: 170</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/U_Ing_Sistem.jpg" alt="Imagen del programa de Ingeniería de Sistemas">
 </div>
