--- a/licenciaturasocialesandina.html
+++ b/licenciaturasocialesandina.html
@@ -837,7 +837,7 @@ p {
         <p><strong>COP$ 2.440.000</strong></p>
         <p>SNIES: 102628 – Res. No. 14609 del 11/08/2021</p>
         <p>Créditos: 144</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/LIC_Cienc_Soc.jpg" alt="Imagen del programa de Licenciatura en Ciencias Sociales">
 </div>
