--- a/maestriagerenciaandina.html
+++ b/maestriagerenciaandina.html
@@ -836,7 +836,7 @@ p {
         <p><strong>SNIES:</strong> 108417</p>
         <p><strong>Resolución:</strong> No. 11697 del 07/11/2019</p>
         <p><strong>Créditos:</strong> 28</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/MG_Ger-Merc-Dig.jpg" alt="Imagen del programa de Maestría en Gerencia de Mercadeo Digital">
 </div>
