--- a/marketingynegociosandina.html
+++ b/marketingynegociosandina.html
@@ -837,7 +837,7 @@ p {
         <p><strong>COP$ 2.460.000</strong></p>
         <p>SNIES: 103213 – Res. No. 1061 del 01/02/2022</p>
         <p>Créditos: 136</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/U_Market-Negocios.jpg" alt="Imagen del programa de Marketing de Negocios">
 </div>
