--- a/administracionempresasceipa.html
+++ b/administracionempresasceipa.html
@@ -838,7 +838,7 @@ p {
         <p><strong>COP$ 1.330.248</strong></p>
         <p>SNIES: 52092 – Res. No. 2291 del 01/03/2022</p>
         <p>Créditos: 160</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/U_Admin_Empr.jpg" alt="Imagen del programa de Administración de Empresas">
 </div>
