--- a/administracionfinancieraceipa.html
+++ b/administracionfinancieraceipa.html
@@ -838,7 +838,7 @@ p {
         <p><strong>COP$ 1.330.248</strong></p>
         <p>SNIES: 52784 – Res. No. 016892 del 20/09/2023</p>
         <p>Créditos: 160</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/U_Admin_Finan.jpg" alt="Imagen del programa de Administración Financiera">
 </div>
