--- a/contaduriapublicaceipa.html
+++ b/contaduriapublicaceipa.html
@@ -836,7 +836,7 @@ p {
         <p><strong>COP$ 1.330.248</strong></p>
         <p>SNIES: 103281 – Res. No. 021028 del 07/11/2023</p>
         <p>Créditos: 160</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/U_Cont_Pub.jpg" alt="Imagen del programa de Contaduría Pública">
 </div>
