--- a/economiaandina.html
+++ b/economiaandina.html
@@ -836,7 +836,7 @@ p {
         <p><strong>COP$ 2.460.000</strong></p>
         <p>SNIES: 109248 – Res. No. 7156 del 12/05/2020</p>
         <p>Créditos: 144</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/U_Econo.jpg" alt="Imagen del programa de Economía">
 </div>
