--- a/espdireccionandina.html
+++ b/espdireccionandina.html
@@ -834,7 +834,7 @@ p {
         <p><strong>COP$ 4.100.000</strong></p>
         <p>SNIES: 116245 – Res. No. 21586 del 21/11/2023</p>
         <p>Créditos: 28</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/ESP-Dir-Prod-Audiov.jpg" alt="Imagen del programa de Especialización en Dirección y Producción de Contenidos Audiovisuales">
 </div>
