--- a/espgerenciaceipa.html
+++ b/espgerenciaceipa.html
@@ -834,7 +834,7 @@ p {
         <p><strong>COP$ 10.208.663</strong></p>
         <p>SNIES: 54068 – Res. No. 007148 del 12/05/2020</p>
         <p>Créditos: 22</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/ESP_Gerencia.jpg" alt="Imagen del programa de Especialización en Gerencia">
 </div>
