--- a/espgerenciasstandina.html
+++ b/espgerenciasstandina.html
@@ -834,7 +834,7 @@ p {
         <p><strong>COP$ 7.550.000</strong></p>
         <p>SNIES: 103548 – Res. No. 5703 del 31/03/2021</p>
         <p>Créditos: 28</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/ESP-Gerenc-SST.jpg" alt="Imagen del programa de Especialización en Gerencia en Seguridad y Salud en el Trabajo">
 </div>
