--- a/espgestionserviciosceipa.html
+++ b/espgestionserviciosceipa.html
@@ -835,7 +835,7 @@ p {
         <p><strong>COP$ 10.208.663</strong></p>
         <p>SNIES: 108891 – Resolución 21506 del 17/11/2023</p>
         <p>Créditos: 22</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/ESP_Gest_Serv.jpg" alt="Imagen del programa de Especialización en Gestión de Servicios">
 </div>
