--- a/espinfanciaandina.html
+++ b/espinfanciaandina.html
@@ -834,7 +834,7 @@ p {
         <p><strong>COP$ 4.950.000</strong></p>
         <p>SNIES: 116728 – Res. No. 4463 del 09/04/2024</p>
         <p>Créditos: 29</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/ESP-Infancia-Adolescencia.jpg" alt="Imagen del programa de Especialización en Infancia, Adolescencia y Desarrollo Familiar">
 </div>
