--- a/licenciaturaeducacionandina.html
+++ b/licenciaturaeducacionandina.html
@@ -836,7 +836,7 @@ p {
         <p><strong>COP$ 2.480.000</strong></p>
         <p>SNIES: 109265 – Res. No. 11579 del 23/06/2022 – 7 años</p>
         <p>Créditos: 144</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/LIC_Educ_Infantil.jpg" alt="Imagen del programa de Licenciatura en Educación Infantil">
 </div>
