--- a/maestriaepidemiologiaandina.html
+++ b/maestriaepidemiologiaandina.html
@@ -834,7 +834,7 @@ p {
         <p><strong>COP$ 8.380.000</strong></p>
         <p>SNIES: 108413 – Res. No. 11693 del 07/11/2019</p>
         <p>Créditos: 48</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/MG_Epidemiol.jpg" alt="Imagen del programa de Maestría en Epidemiología">
 </div>
