--- a/psicologiaandina.html
+++ b/psicologiaandina.html
@@ -834,7 +834,7 @@ p {
         <p><strong>COP$ 2.740.000</strong></p>
         <p>SNIES: 105739 – Res. No. 15807 del 03/08/2016</p>
         <p>Créditos: 160</p>
-        <button>Inscríbete aquí</button>
+        <a href="formulario.html" target="_blank"><button>Inscríbete aquí</button></a>
     </div>
     <img src="Imagenes/U_Psicolog.jpg" alt="Imagen del programa de Psicología">
 </div>
