se actualizo contacto emergente
se actualizo contacto emergente

--- a/index.html
+++ b/index.html
@@ -713,6 +713,31 @@ header h3 {
         .close-btn:hover {
             color: #d9534f; /* Color al pasar el mouse */
         }
+        .cerrar {
+        background-color: red;
+        color: white;
+        border: none;
+        padding: 8px 12px;
+        cursor: pointer;
+        margin-left: 10px;
+        }
+
+        .reabrir {
+        display: none;
+        background-color: #333;
+        color: white;
+        padding: 10px;
+        text-align: center;
+        cursor: pointer;
+        width: 150px;
+        margin: 10px auto;
+        border-radius: 5px;
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        z-index: 999;
+        }
+
 
         /* Adaptaciones responsivas */
         @media (max-width: 768px) {
@@ -1530,6 +1555,10 @@ h1 {
         <a href="https://wa.me/573122863375" target="_blank" title="WhatsApp"><i class="fas fa-phone-alt"></i> <span class="phone-number">+57 312 286 3375</span></a>
         <a href="mailto:suramericanoce@gmail.com" title="Correo Electrónico" class="email"><i class="fas fa-envelope"></i> <span class="email-text">suramericanosibundoy@gmail.com</span></a>
     </div>
+
+    <!-- Botón para abrir el formulario -->
+<button onclick="openForm()" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;">Abrir Formulario</button>
+
     <!-- Formulario de contacto emergente -->
 <div class="contact-popup" id="contactForm">
     <span class="close-btn" onclick="closeForm()">&times;</span>
@@ -1621,7 +1650,10 @@ h1 {
             <option value="doctorado">Doctorado</option>
         </select>
 
-        <button type="submit">Enviar</button>
+        <div class="button-group">
+            <button type="submit">Enviar</button>
+            <button type="button" class="close-button" onclick="closeForm()">Cerrar</button>            
+        </div>        
     </div>
 </form>
 
@@ -1725,7 +1757,25 @@ h1 {
     } else {
         document.getElementById("universidad").value = "Selecciona un programa";
     }
-}
+    // Boton Cerrar y Reabrir de Formulario Emergente
+    }
+    document.getElementById("cerrarBtn").addEventListener("click", function () {
+        document.getElementById("formulario").style.display = "none";
+        document.getElementById("abrirFormulario").style.display = "block";
+    });
+
+    function mostrarFormulario() {
+        document.getElementById("formulario").style.display = "block";
+        document.getElementById("abrirFormulario").style.display = "none";
+    }
+    function closeForm() {
+    document.getElementById('contactForm').style.display = 'none';
+    }
+    // Función para abrir el formulario
+    function openForm() {
+    document.getElementById('contactForm').style.display = 'block';
+    }
+ 
 
     </script>
 </body>
