--- a/marketingynegociosandina.html
+++ b/marketingynegociosandina.html
@@ -1000,6 +1000,11 @@ p {
     }
 
     document.getElementById("defaultOpen").click();
+
+    //Boton para Solicitar Informacion en Programas Academicos //
+    function solicitarInformacion() {
+        window.open("https://wa.me/573122863375", "_blank");
+    }
 </script>
 </body>
 </html>
