--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,7 @@
         }
         
         .carousel-inner {
-            background: url('imagenes/0fondobanner.png') center center/cover no-repeat;
+            background: url('Imagenes/0fondobanner.png') center center/cover no-repeat;
             position: relative;
         }
         /* Estilos ubicacion de atribucion a freepik */
@@ -1316,7 +1316,7 @@
                     <div class="attribution">
                         Diseñado por <a href="https://www.freepik.es" target="_blank">Freepik</a>
                     </div>
-                    <img src="imagenes/1estudiantesonriente.png" alt="Estudiantes felices">
+                    <img src="Imagenes/1estudiantesonriente.png" alt="Estudiantes felices">
                     <div class="carousel-caption">
                         <h2>"Las oportunidades están ahí, ¡hazlas tuyas!"</h2>
                         <p>El Centro de Estudios Suramericano te abre las puertas a un futuro brillante. Educación de alta calidad y asesoramiento personalizado.</p>
@@ -1329,7 +1329,7 @@
                     <div class="attribution">
                         Diseñado por <a href="https://www.freepik.es" target="_blank">Freepik</a>
                     </div>
-                    <img src="imagenes/2estudiantelibro.png" alt="Estudiante con libro">
+                    <img src="Imagenes/2estudiantelibro.png" alt="Estudiante con libro">
                     <div class="carousel-caption">
                         <h2>"Construye un futuro sólido con una carrera de impacto"</h2>
                         <p><strong>⚖️ Derecho:</strong> Defiende la justicia, protege derechos y cambia el mundo. Conviértete en un líder con una formación integral.</p>
@@ -1342,7 +1342,7 @@
                     <div class="attribution">
                         Diseñado por <a href="https://www.freepik.es" target="_blank">Freepik</a>
                     </div>
-                    <img src="imagenes/3estudiantecaminando.png" alt="Profesional en camino al éxito">
+                    <img src="Imagenes/3estudiantecaminando.png" alt="Profesional en camino al éxito">
                     <div class="carousel-caption">
                         <h2>"Especialízate y lidera con visión estratégica"</h2>
                         <p><strong>💼 Alta Gerencia:</strong> Dirige empresas con innovación y liderazgo. Aprende a tomar decisiones clave y destaca en un mundo competitivo.</p>
@@ -1355,7 +1355,7 @@
                     <div class="attribution">
                         Diseñado por <a href="https://www.freepik.es" target="_blank">Freepik</a>
                     </div>
-                    <img src="imagenes/4estudiantetrabaja.png" alt="Estudiante innovando">
+                    <img src="Imagenes/4estudiantetrabaja.png" alt="Estudiante innovando">
                     <div class="carousel-caption">
                         <h2>"Conocimiento avanzado para transformar el mundo"</h2>
                         <p><strong>🚀 Maestría en Innovación:</strong> Sé el motor del cambio. Aprende a desarrollar soluciones disruptivas y lidera la transformación.</p>
